# llms-txt-generator-mcp

./: .flake8  .gitignore  .sesskey  Makefile  README.md  generate_deeplink.py  generate_llms_txt.py  pyproject.toml  server.py
src/: __init__.py  __main__.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  config.py
src/core/: __init__.py  generator.py
src/utils/: __init__.py  advanced_traversal.py  content_processor.py  sitemap_extractor.py
tests/: __init__.py  test_generator.py
